Version Changes for Hypermail

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

 Peter McCluskey (Feb 13, 2003)
   Add -DTRIO_MINIMAL. Solves a trio compile problem in SunOS and makes
  binary a little smaller.
   Strip mail.c down to minimal warning message so we don't have to worry
  about analyzing it's security problems.

 Kent Landfield (kent@hypermail.org) (February 12, 2003)
  - Converted msg2archive.c to use Thomas Biege's <thomas@suse.de>
    s_popen() instead of popen().

 Kent Landfield (kent@hypermail.org) (February 11, 2003)
  - Modified configure.in to test for snprintf. This is needed
    since Solaris 2.5.1 does not have snprintf.  This only affects
    the msg2archive and mbox2hypermail in the archive directory.

 Kent Landfield (kent@hypermail.org) (February 10, 2003)
  - Modified configure to assure on Solaris that the ctype functions 
    were used instead of the macroes. New NO_MACRO define in config.h.
  - Added most of the patches submitted by Thomas Biege <thomas@suse.de>
  - Cleaned up compilation commenting out unused variables with NOT_USED.
    Need to remove them and other unnecessary code soon.
  - Various other minor compilation issues.
  - Corrected prototype issue in print.c
  - Added parameter checking to archive/*.c source

 Peter McCluskey (Feb 10, 2003)
  Fixed the append option to handle lines between end of headers through
 mime boundary correctly.

 Jose Kahan (jose@w3.org) (February 06, 2003)
  Added a protection against the use of the nonsequential messaging option
  when hypermail wasn't compiled with the libfnv.

 Kent Landfield (kent@hypermail.org) (February 06, 2003)
  Hypermail 2.1.6 runs on a DEC Alpha running TRU64 when compiled
  with GCC 2.95. It does however require the -mieee flag be set for the
  trionan.c sources.  
   - Modified configure.in script to support setting the the -mieee flag
     for an Alpha TRU64 build.
   - Modified various Makefile.in files to assure clean/clobber/distclean 
     worked universally.  
